feat: 分离普通用户和管理员权限
- UserDetailsServiceImpl 添加角色权限
- delete/toggleActive 增加归属检查
- allUrls 仅 ADMIN 可访问
- stats 按角色过滤数据范围
- 数据库预置 admin 账号 (admin/admin123)
- 配置 MySQL 密码为环境变量 ${MYSQL_PASSWORD}