@@ -1,6 +1,7 @@
 package top.naccl.dwz.web.security;
 
 import org.springframework.beans.factory.annotation.Autowired;
+import org.springframework.security.core.authority.SimpleGrantedAuthority;
 import org.springframework.security.core.userdetails.User;
 import org.springframework.security.core.userdetails.UserDetails;
 import org.springframework.security.core.userdetails.UserDetailsService;
@@ -8,7 +9,7 @@ import org.springframework.security.core.userdetails.UsernameNotFoundException;
 import org.springframework.stereotype.Service;
 import top.naccl.dwz.core.mapper.UserMapper;
 
-import java.util.Collections;
+import java.util.List;
 
 @Service
 public class UserDetailsServiceImpl implements UserDetailsService {
@@ -21,6 +22,7 @@ public class UserDetailsServiceImpl implements UserDetailsService {
         if (user == null) {
             throw new UsernameNotFoundException("用户不存在");
         }
-        return new User(user.getId().toString(), user.getPassword(), Collections.emptyList());
+        return new User(user.getId().toString(), user.getPassword(),
+                List.of(new SimpleGrantedAuthority("ROLE_" + user.getRole())));
     }
 }
